<resources>
    <string name="app_name">Personal Blood Bank </string>
    <string name="name"> Enter Your Name </string>
    <string name="email"> Enter Your Email </string>
    <string name="Phone"> Enter Your Phone Number </string>
    <string name="address"> Enter Your Address </string>
    <string name="ocapation"> Enter Your Ocapation </string>
    <string name="dateofBirth"> Date of Birth </string>
    <string name="text_title"> Blood Donader Information </string>

</resources>
