<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mediavision01.personal_blood_info.UpdateRecordActivity">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Update Registration Form"
            android:background="#000"
            android:textColor="#fff"
            android:padding="5dp"
            android:textSize="20dp"
            android:gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/updateNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/updateemailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/updatephoneET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Phone"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="2dp"
            android:text="Gender"/>
        <RadioGroup
            android:id="@+id/updateradioBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/maleRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"/>
            <RadioButton
                android:id="@+id/femaleRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"/>
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="5dp"
            android:text="@string/dateofBirth"/>
        <Button
            android:id="@+id/updatedateBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dateofBirth"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/addressET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="3dp"
            android:text="Select Your Blood Group"/>
        <Spinner
            android:id="@+id/updateSB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/updateBT"
            android:text="Update"
            android:background="#000"
            android:textColor="#fff"
            android:layout_margin="5dp"
            android:onClick="bloodInfoPersonUpdate"/>
    </android.support.v7.widget.LinearLayoutCompat>
</ScrollView>
